2006-08-24    <jeff@mini.nerble.net>

	* schedule.cc,readnpcs.cc,actors.cc:  Working on support for
	usecode-scripted schedules.  Also did some cleanup on schedule
	reading/writing.

2006-08-22  Marzo Sette Torres Junior <marzojr@yahoo.com>
	* actions.cc: Testing adding a limit to the number of steps between each
	  check in Approach_actor_action (makes for smarter archers and monsters).
	* effects.cc: Removed some duplicate increments in height for projectiles
	  and slightly tweaked the start and end positions for them.

2006-08-21  Marzo Sette Torres Junior <marzojr@yahoo.com>
	* Makefile.common: Force recreation of ucparse.{cc,h} or uclex.cc if,
	  respectively, ucparse.yy or uclex.yy are changed. Need to know if
	  it causes compilation problems in MorphOS or BeOS. Also removed some
	  trailing spaces.

2006-08-20  Marzo Sette Torres Junior <marzojr@yahoo.com>
	* Fixed compilation problems caused by modmgr by moving files bggame.*,
	  sigame.*, devgame.* and modmgr.* into new 'gamemgr' directory.

2006-08-14  Marzo Sette Torres Junior <marzojr@yahoo.com>
	* modmgr.cc: Added two path macros to mod cfg files: '__MODS__' and
	  '__MOD_PATH__'. They are expanded, respectivelly, to the game's '<MODS>'
	  dir and to the mod's '<MODS>/<mod_title>' (where '<mod_title>' is the
	  mod's cfg option, defaulting to the filename -- sans extension -- of
	  said cfg).
	* schedule.cc: Slightly tweaked the 'talk' schedule. NPCs will no longer
	  try to talk through mountains.
	* ucsym.*, ucparse.yy, ucfun.h: Fixed bug #1540599. Now, declaring functions
	  through externs and directly will always assign the same function number
	  in both cases (and regardless of order) as long as both have the same
	  number of parameters (and whether or not autonumbering -- either style --
	  is being used). Duplicate declarations (but not duplicate externs, unless
	  the parameter count differs) will raise errors now.

2006-08-14  Marzo Sette Torres Junior <marzojr@yahoo.com>